<resources>
    <string name="app_name">TambosCSV</string>
    <string name="title_activity_main2">TambosCSV</string>
    <string name="title_activity_dynfields">TambosCSV</string>
    <string name="title_activity_main">TambosCSV</string>

    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed_inner">TabbedActivityInner</string>
    <string name="title_activity_tab_test">TabTest</string>
    <string name="title_activity_test">ActivityTest</string>

    <string-array name="types">
        <item>Mobile</item>
        <item>Office</item>
        <item>Home</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="agregar">Agregar</string>
    <string name="quitar">Quitar</string>
    <string name="exportar">Exportar</string>
    <string name="litros">Litros</string>
    <string name="caravana">Caravana</string>
    <string name="muestra_correlativa">Muestra correlativa</string>
    <string name="muestras_correlativas">Muestras correlativas</string>
    <string name="caravanas">Caravanas</string>
    <string name="bretes">Bretes</string>
    <string name="vacas">Vacas</string>
    <string name="dialog_message" />
    <string name="dialog_title" />
    <string name="siguiente">Siguiente</string>
</resources>

