<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_field_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAddField"
            android:text="@string/agregar"
            android:theme="@style/AppTheme.Button" />

        <Button
            android:id="@+id/delete_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDelete"
            android:text="@string/quitar"
            android:theme="@style/AppTheme.Button" />

        <Button
            android:id="@+id/export_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onExport"
            android:text="@string/exportar"
            android:theme="@style/AppTheme.Button" />

    </LinearLayout>


</ScrollView>